GPC/tests/examples/fail/nonExistantObject.gpc

a = GPRM::Test::Test();

int nonExistantObject() {
    return 1;
}
